--- a/src/app/box/box.component.html
+++ b/src/app/box/box.component.html
@@ -1,3 +1,3 @@
 <div (click)="putBall()" [ngClass]="isThereABall() ? 'opened-box' : 'closed-box'">
-    Box {{number}}
+    <ball *ngIf="isThereABall() || isPastBall()" [ngClass]="isPastBall() ? 'past-ball' : 'fullball'"></ball>
 </div>
